[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/LevelEndPopup.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 1 )

[node name="WinDialog" type="PopupDialog" parent="."]
margin_right = 585.0
margin_bottom = 585.0

[node name="HBoxContainer" type="HBoxContainer" parent="WinDialog"]
margin_right = 585.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="WinDialog/HBoxContainer"]
margin_right = 144.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WinDialog/HBoxContainer"]
margin_left = 148.0
margin_right = 436.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WinDialog/HBoxContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 56.0
text = "You Win!"
align = 1

[node name="NextLevelButton" type="Button" parent="WinDialog/HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 288.0
margin_bottom = 116.0
text = "Next Level"

[node name="RestartButton" type="Button" parent="WinDialog/HBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 288.0
margin_bottom = 176.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="WinDialog/HBoxContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 288.0
margin_bottom = 236.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control6" type="Control" parent="WinDialog/HBoxContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 288.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control4" type="Control" parent="WinDialog/HBoxContainer"]
margin_left = 440.0
margin_right = 585.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseDialog" type="PopupDialog" parent="."]
margin_right = 585.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="LoseDialog"]
margin_right = 585.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="LoseDialog/HBoxContainer"]
margin_right = 158.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LoseDialog/HBoxContainer"]
margin_left = 162.0
margin_right = 422.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LoseDialog/HBoxContainer/VBoxContainer"]
margin_right = 260.0
margin_bottom = 56.0
text = "You Loose!"
align = 1

[node name="RestartButton" type="Button" parent="LoseDialog/HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 260.0
margin_bottom = 116.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="LoseDialog/HBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 260.0
margin_bottom = 176.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control6" type="Control" parent="LoseDialog/HBoxContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 260.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control4" type="Control" parent="LoseDialog/HBoxContainer"]
margin_left = 426.0
margin_right = 585.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="popup_hide" from="WinDialog" to="." method="_on_WinDialog_popup_hide"]
[connection signal="pressed" from="WinDialog/HBoxContainer/VBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="WinDialog/HBoxContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="WinDialog/HBoxContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="popup_hide" from="LoseDialog" to="." method="_on_LoseDialog_popup_hide"]
[connection signal="pressed" from="LoseDialog/HBoxContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="LoseDialog/HBoxContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
